--- a/ru.ilya.SpringMvc/pom.xml
+++ b/ru.ilya.SpringMvc/pom.xml
@@ -98,6 +98,12 @@
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
 
+    <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
+      <version>3.0.12.RELEASE</version>
+    </dependency>
 
 
   </dependencies>
